[package]
authors = [" <>"]
edition = "2021"
name = "scream"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.3"
dioxus-web = "0.3"

log = "0.4.6"

# WebAssembly Debug
console_error_panic_hook = "0.1.7"
nostr-sdk = "0.22.0"
wasm-logger = "0.2.0"
